NaitveBOINC: small fixes, added disabling/enabling prefs on manage client activity.

--- a/src/NativeBOINC/TODO.txt
+++ b/src/NativeBOINC/TODO.txt
@@ -101,7 +101,7 @@ jeszcze raz usprawnic i uszczelnić obsługę błędów
   * dodaj opcję autostartu (gdy odpala się aplikację i gdy odpala się system)
 / * dodaj automatyczne refresh widgetów przy zdarzeniach klientach
 / * zabezpiecz operacje na na DB listy klientów
-  * usprawnij opcję zliczania wykorzystania sieci (tak by odświeżać co 1-2 sekundy)
+/ * usprawnij opcję zliczania wykorzystania sieci (tak by odświeżać co 4 sekundy)
 / * dodaj wskaźnik temperatury w ScreenLockActivity.
   * właściwie obsługuj brak odpowiedzi klienta przy starcie (np.: gdy benchmark jest odpalony)
 / * popraw autorestart gdy zrobiono przy nim screen lock
@@ -114,6 +114,7 @@ jeszcze raz usprawnic i uszczelnić obsługę błędów
 / * automatycznie aktualizuj stan w głównym oknie przy eventach klienta
   * popraw kończenie instalacji projektu, gdy klient padł przy update_apps lub nie odpowiada przez ok. 7 sek.
   * sprawdz synchronizacje projektów z distribManager (synchronize project distribs).
+  * usprawnij zmianę ustawień odświeżania (jeśli ma być natychmiastowo) - juz zrobione
 
 następne wersje:
 * dodać obsługę screensavera.
