NaitveBOINC: added autostart option. fixed small bugs. remove insecure debug log (with password).

--- a/src/NativeBOINC/TODO.txt
+++ b/src/NativeBOINC/TODO.txt
@@ -98,7 +98,7 @@ jeszcze raz usprawnic i uszczelnić obsługę błędów
 
 
 / * automatyczne dodaj włączanie/wyłączanie opcji w ManageClientActivity
-  * dodaj opcję autostartu (gdy odpala się aplikację i gdy odpala się system)
+/ * dodaj opcję autostartu (gdy odpala się aplikację i gdy odpala się system)
 / * dodaj automatyczne refresh widgetów przy zdarzeniach klientach
 / * zabezpiecz operacje na na DB listy klientów
 / * usprawnij opcję zliczania wykorzystania sieci (tak by odświeżać co 4 sekundy)
@@ -109,16 +109,16 @@ jeszcze raz usprawnic i uszczelnić obsługę błędów
     (nowa aktywność ProjectList)
   * obsługuj poprawnie postęp w transferu przyłączeniu i nie tylko (zdarzenie connectionProgress)
     w pause/resume
-  * sprawdź opcję w nativeclient activity
+  * sprawdź opcje w nativeclient activity
 / * sprawdź opcje autom. połączenia przy starcie aplikacji (głównego okna).
 / * automatycznie aktualizuj stan w głównym oknie przy eventach klienta
   * popraw kończenie instalacji projektu, gdy klient padł przy update_apps lub nie odpowiada przez ok. 7 sek.
   * sprawdz synchronizacje projektów z distribManager (synchronize project distribs).
-  * usprawnij zmianę ustawień odświeżania (jeśli ma być natychmiastowo) - juz zrobione
 / * usuń problem starego stanu w tabach podczas wyłączeniu klienta przy obracaniu (chyba zrobione)
   
 / * wstaw autorefresh w InstalledBinariesActivity
   * wstaw filtrowanie w UpdatesBinaries i UpdateFromSDCard dla projektów, które są instalowane w tym czasie
+  (naprawdę należy filtrować?)
 / * dodaj obsługe FATAL_ERROR priority w messages (kolorowanie)
 / * dodaj menu przy długim kliku w puste miejsce w aktywnościach z listy i multiselect
 
