--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,13 @@
+Version 0.3.9.9 (alpha) (2012-06-24)
+- fixed NPE and crashes
+- fixed installations and error handling
+- improved activites with list
+- improved behaviour in first installation
+- new option: autostarts.
+- improved widget behaviour
+- improved wakelocking
+- lot of small fixes 
+
 Version 0.3.9.7.1 (alpha) (2012-06-18)
 - fixed db handling (added important escaping)
 - improving NativeClientActivity
