--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,4 +1,7 @@
-Version 0.3.9.9.1 (alpha) (2012-06-24)
+Version 0.3.9.9.2 (alpha) (2012-07-21)
+- fixed wake lock acquiring/releasing for main activity
+
+Version 0.3.9.9.1 (alpha) (2012-06-25)
 - fixed autostart (currently made 3 trials)
 - added 'run always when plugged' option in localprefs
 
