--- a/src/NativeBOINC/res/values/strings.xml
+++ b/src/NativeBOINC/res/values/strings.xml
@@ -27,6 +27,7 @@
 	<string name="install_service_desc">Native Client and BOINC application Installer service </string>
 	<string name="nboinc_service_desc">Native BOINC client service</string>
 
+	<string name="newsHandlerDesc">News Handler</string>
 	<!-- widget names -->
 	<string name="widget2x1">NativeBOINC small</string>
 	<string name="widgetTablet">NativeBOINC large</string>
@@ -718,4 +719,6 @@
 	<!-- <string name="installAppsSourceUrl">http://192.168.1.3:8080/examples/boinc_apps/</string>-->
 	<!-- <string name="installAppsSourceUrl">http://192.168.1.3:8080/examples/new/boinc_apps/</string>-->
 	
+	<!-- notification sources -->
+	<string name="newsRemoteFile">http://krzyszp.info/matszpk/notifications/latest.xml</string>
 </resources>
