--- a/src/NativeBOINC/res/values-pl/strings.xml
+++ b/src/NativeBOINC/res/values-pl/strings.xml
@@ -31,6 +31,8 @@
 	<string name="widget2x1">NativeBOINC mały</string>
 	<string name="widgetTablet">NativeBOINC duży</string>
 	
+	<string name="autostartReceiver">Autostart receiver</string>
+	
 	<!-- Some common, generic strings -->
 	<string name="back">Powrót</string>
 	<string name="next">Dalej</string>
@@ -177,6 +179,8 @@
 	<string name="prefNewsUpdatePeriodSummary">Update news every</string>
 	<string name="prefViewItemTypeTitle">Pokazuj typ elementu</string>
 	<string name="prefViewItemTypeSummary">Pokazuj typ elementu jako</string>
+	<string name="prefLatestNewsTitle">Ostatnie newsy</string>
+	<string name="prefLatestNewsSummary">Wyświetla listę ostatnich newsów</string>
 	
 	<!--  Local Preferences -->
 	<string name="localPreferences">Preferencje lokalne</string>
@@ -283,6 +287,9 @@
 	<string name="warnShutdownText">Połączony klient będzie wyłączony. Ten manager nie może wystartować klienta po tym.</string>
 	
 	<!--  NativeClient activity -->
+	<string name="nativeAutostart">Startowanie klienta</string>
+	<string name="nativeAutostartTitle">Autostart klienta</string>
+	
 	<string name="nativeBoincClient">Natywny klient BOINC</string>
 	<string name="nativeBoincNetwork">Opcje sieciowe</string>
 	
@@ -673,6 +680,9 @@
 	
 	<string name="errorNumFormat">(błąd: %d)</string>
 	
+	<string name="cantAuthorizeClientMonitor">Nie mogę autoryzować monitora klienta!</string>
+	<string name="cantAuthorizeClientMonitorMessage">Nie mogę autoryzować monitora klienta! Nie możesz automatycznie instalować binariów projektów (możesz użyć \'Aktualizuj binaria\' opcję po dodawaniu projektu) lub odbierać zdarzenia klienta. Możesz zrestartować klienta (zalecamy).</string>
+	
 	<!-- HostInfo display -->
 	<string name="hostInfoPart1">
 		&lt;b>Nazwa domeny:&lt;/b> %1$s&lt;br />
@@ -699,4 +709,12 @@
 		&lt;b>Rozmiar dysku:&lt;/b> %8$s&lt;br />
 		&lt;b>Wolne miejsce dysku:&lt;/b> %9$s&lt;br />
 	</string>
+	
+	<!-- news, news -->
+	<string name="latestNews">Ostatnie newsy</string>
+	<string name="newsNotifyText">Newsy zostały odebrane teraz!</string>
+	<string name="newsMessage">Wiadomość</string>
+	<string name="noNewsAvailable">Nie ma nowych newsów</string>
+	
+	<string name="newBinariesAvailable">Nowe binaria dostępne!</string>
 </resources>
