--- a/src/NativeBOINC/res/values/strings.xml
+++ b/src/NativeBOINC/res/values/strings.xml
@@ -181,7 +181,7 @@
 	<string name="prefViewItemTypeTitle">View item type</string>
 	<string name="prefViewItemTypeSummary">View item type as</string>
 	<string name="prefLatestNewsTitle">Latest news</string>
-	<string name="prefLatestNewsSummary">Show latest news list</string>
+	<string name="prefLatestNewsSummary">Displays latest news list</string>
 	
 	<!--  Local Preferences -->
 	<string name="localPreferences">Local preferences</string>
@@ -730,6 +730,6 @@
 	<!-- <string name="installAppsSourceUrl">http://192.168.1.3:8080/examples/new/boinc_apps/</string>-->
 	
 	<!-- notification sources -->
-	<!--<string name="newsRemoteFile">http://krzyszp.info/matszpk/news/news.xml</string>-->
-	<string name="newsRemoteFile">http://192.168.1.3:8080/examples/news.xml</string>
+	<string name="newsRemoteFile">http://krzyszp.info/matszpk/news/news.xml</string>
+	<!-- <string name="newsRemoteFile">http://192.168.1.3:8080/examples/news.xml</string>-->
 </resources>
