--- a/src/NativeBOINC/TODO.txt
+++ b/src/NativeBOINC/TODO.txt
@@ -33,6 +33,7 @@ Na Teraz:
     (obsługe pola project_name) 
 / * popraw obsługę ProjectsFromClientRetriever i metod uzywających jej.
   * dodac powiadamianie o nowych wersjach i komunikatach ze strony autora.
+  * przenies opcje newsów do nativeclient screen, dodaj opcję wyłączania notyfikacji
   
 ---------------------------------------------------------------
 
