--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,6 @@
+Version 0.4.0.1 (beta) (2012-08-22)
+- changed address of distribution files to files.nativeboinc.org
+
 Version 0.4 (beta) (2012-08-15)
 - fixed unexpected behavior when connection broken
 - fixed and improved notice item list
