--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,6 @@
+Version 0.4.0.2 (beta) (2012-09-17):
+- fixed local prefs and fix NPE
+
 Version 0.4.0.1 (beta) (2012-08-22)
 - changed address of distribution files to files.nativeboinc.org
 
