--- a/src/NativeBOINC/res/values/strings.xml
+++ b/src/NativeBOINC/res/values/strings.xml
@@ -702,6 +702,7 @@
 	<string name="cantAuthorizeClientMonitor">Can\'t authorize client monitor!</string>
 	<string name="cantAuthorizeClientMonitorMessage">Can\'t authorize client monitor! You can\'t automatically install project binaries (you can use Update binaries option after adding project) or receive client events. You can restart BOINC client (we recommended).</string>
 	
+	<string name="cantDeleteProjectBins">Can\'t delete project binaries</string>
 	<!-- HostInfo display -->
 	<string name="hostInfoPart1">
 		&lt;b>Domain name:&lt;/b> %1$s&lt;br />
