--- a/src/NativeBOINC/res/values-pl/strings.xml
+++ b/src/NativeBOINC/res/values-pl/strings.xml
@@ -123,7 +123,7 @@
 
 	<!-- About -->
 	<string name="aboutTitle">Informacje podstawowe</string>
-	<string name="aboutHomepageUrl">https://github.com/matszpk/native-boinc-for-android</string>
+	<string name="aboutHomepageUrl">http://nativeboinc.org/</string>
 	<string name="aboutText">
 	    %1$s to pełnoprawny natywny klient BOINC dla Android zintegrowany
 		z AndroBOINC manager v1.6.7b3.\n
@@ -360,7 +360,7 @@
 	<string name="waitingForShutdown">Czekanie na wyłączenie</string>
 	
 	<!-- move from/to sdcard -->
-	<string name="boincMoveTo">Przenoszenie instalacji BOINC</string>
+	<string name="boincMoveTo">Przenoszenie BOINC\'a</string>
 	<string name="moveToBegin">Rozpoczęcie przenoszenia instalacji BOINC</string>
 	<string name="moveToProgress">Przenoszenie instalacji BOINC</string>
 	<string name="moveToFinish">Przenoszenie instalacji BOINC zakończone</string>
@@ -433,11 +433,12 @@
 	<string name="installWelcome">Witamy w NativeBOINC!</string>
 	<string name="installClientInstall">Proszę stuknąć przycisk \'Następny\' by ściągnąć i zainstalować klienta BOINC.</string>
 	<string name="versionToInstall">Wersja od instalacji</string>
+	<string name="placeToInstall">Miejsce instalacji</string>
 	<string name="installSuccessfully">Natywny klient BOINC został zainstalowany pomyślnie!</string>
 	<string name="installAddProject">Proszę stuknąć przycisk \'Dodaj projekt\' by dodać pierwszy projekt BOINC, lub \'Synchronizuj z BAM\' jeśli chcesz synchronizować klienta z BAM.</string>
 	<string name="installFinished">Instalacja została zakończona. Proszę stuknąć przycisk \'Zakończ\'.</string>
 	<string name="installWidgetFinished">Podpowiedź: Zalecamy używanie widgeta NativeBOINC do kontrolowania klienta natywnego.</string>
-	<string name="installInfoFinished">Hint: You can also browse Project Wiki on \'https://github.com/matszpk/native-boinc-for-android/wiki\' to get help and informations.</string>
+	<string name="installInfoFinished">Hint: You can also browse Project Wiki on \'http://nativeboinc.org/\' to get help and informations.</string>
 	<string name="installFinishedBenchmark">Podczas instalowania perwszego projektu, BOINC może uruchomić benchmark, który pracuje przez 30 sekund.</string>
 
 	<string name="installReadBefore">PRZECZYTAJ PRZED INSTALACJĄ:</string>
