--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,8 @@
+Version 0.4.0.5.2 (beta) (2012-10-14):
+- fixed move to installation
+- fixed operation cancelling
+- fixed tabs behavior
+
 Version 0.4.0.5.1 (beta) (2012-10-11):
 - fixed exec for sdcard installation
 - fixed tabs behavior (fixing unhandled exceptions)  
