NativeBOINC: small fixes.

--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,7 @@
+Version 0.4.0.5.2 (beta) (2012-10-21):
+- fixed client monitor handling (exception)
+- fixed colors in the notifications
+
 Version 0.4.0.5.2 (beta) (2012-10-14):
 - fixed move to installation
 - fixed operation cancelling
